kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
       labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: hashicorp/http-echo:latest
          args:
            - "-text=Hello World"
          ports:
            - containerPort: 3000
          resources:
            requests: 
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
