kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
      - port: 3000
        targetPort: 3000
  type: LoadBalancer
