kubernetes/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    cert-mananger.io/cluster-issuer: "selfsigned-issuer"
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - ""
      secretName: alb-tls-secret
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 3000
